chore: rest template  example